--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Job Portal </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
 </head>
 <body>
-    
+    <!--     No need of this banner this time so Just comment it out   -->
     <!-- top banner -->
-
-    <div class="top-banner">
+    <!-- <div class="top-banner">
         <div class="container">
             <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
         </div>
-    </div>
+    </div> -->
+
+    
 
     <!-- nav bar -->
     <nav>
         <div class="container main-nav flex">
             <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="company logo">
+                <img src="logo.png" alt="company logo">
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
