relevant commit message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="header-left">
                 <h1>Design Confidently</h1>
                 <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button get-started-btn"><button class="get">Get Started</button></a>
+                <a href="#" class="get"><button class="get">Get Started</button></a>
             </div>
             <div class="header-right">
                 <img src="./assets/asset 2.png" alt="hero image">
@@ -80,37 +80,37 @@
                     <img src="./assets/asset 11.svg" alt="">
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
-                    <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="secondary-button">Learn More </a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 13.svg" alt="">
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="secondary-button">Learn more </a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 14.svg" alt="">
                     <h3>First click tests</h3>
                     <p>Test interaction with first click and navigation tests.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="secondary-button">Learn more </a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 15.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="secondary-button">Learn more </a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 16.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="secondary-button">Learn more </a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 17.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="s">Learn more </a>
                 </div>
             </div>
         </div>
@@ -250,15 +250,7 @@
 
         var icon=document.getElementById("icon")
 
-        icon.onclick=function(){
-            document.body.classList.toggle("dark-theme");
-            if(document.body.classList.contains("dark-theme")){
-                icon.src="sun.png";
-            }
-            else{
-                icon.src="moon.png";
-            }
-        }
+
     </script>
 
 </body>
