[feat] : bacl to top button

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
       </div>
     </footer>
-
+    <button onclick="topFunction()" id="backToTopBtn" title="Go to top">🡱</button>
     <!-- subfooter -->
 
     <div class="subfooter">
@@ -372,6 +372,27 @@
           icon.src = "moon.png";
         }
       };
+      // script.js
+// Get the button
+let mybutton = document.getElementById("backToTopBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+    } else {
+        mybutton.style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0; // For Safari
+    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
+
     </script>
   </body>
 </html>
