--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
     <!-- header section -->
     <header>
+      
       <div class="container header-section flex">
+        <centre><img src="pp.png"  height="200px" width="200px" /></centre>
         <div class="header-left">
           <h1>Design Confidently</h1>
           <p>
