--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="sun.png" />
 
     <link rel="stylesheet" href="media-queries.css" />
   </head>
