--- a/signin.html
+++ b/signin.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+  />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
 </head>
 <body>
-    <div class="containers">
-        <h2>Sign In</h2>
-        <form id="signInForm">
-            <input type="text" id="signInUsername" placeholder="Username" required>
-            <input type="password" id="signInPassword" placeholder="Password" required>
-            <button type="submit">Sign In</button>
-        </form>
-        <p id="signInError" class="error-message"></p>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  <div class="d-flex align-items-center justify-content-center vh-100 ms-auto me-auto">
+    <img src="./assets/user.webp" alt="user" class="d-none d-md-block w-50" />
+    <div class="max-w-md w-100 p-3 rounded">
+      <h2 class="text-3xl font-bold text-center mb-6 text-black text-login col-md-9">Login Account</h2>
+      <form id="login-form" class="form-login col-md-9">
+        <div class="mb-3">
+          <label for="email" class="form-label text-black">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <div class="input-group">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+              <button type="button" class="btn btn-outline-secondary" id="toggle-password-visibility">
+                <i class="far fa-eye"></i>
+              </button>
+            </div>
+          </div>
+        <div class="d-flex justify-content-between align-items-center flex-wrap">
+          <button type="submit" class="btn btn-primary mb-2">Submit</button>
+          <p class="text-black mb-0">
+            New to the Platform?
+            <a href="/signup.html" class="text-primary">Signup</a>
+          </p>
+        </div>
+      </form>
     </div>
-    <script src="script.js"></script>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+  <script>
+    const togglePasswordVisibility = document.getElementById('toggle-password-visibility');
+    const passwordInput = document.getElementById('password');
+
+    togglePasswordVisibility.addEventListener('click', () => {
+        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput.setAttribute('type', type);
+        togglePasswordVisibility.innerHTML = type === 'password' ? '<i class="far fa-eye"></i>' : '<i class="far fa-eye-slash"></i>';
+      });
+  </script>
 </body>
 </html>
