--- a/signup.html
+++ b/signup.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup Page</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+
+
 </head>
 <body>
-    <div class="containers">
-        <h2>Sign Up</h2>
-        <form id="signUpForm">
-            <input type="text" id="signUpUsername" placeholder="Username" required>
-            <input type="email" id="signUpEmail" placeholder="Email" required>
-            <input type="password" id="signUpPassword" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
-        </form>
-        <p id="signUpError" class="error-message"></p>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
+    <div class="d-flex align-items-center justify-content-center vh-100 ms-auto me-auto">
+        <img src="./assets/user.webp" alt="user" class="d-none d-md-block w-50" />
+        <div class="max-w-md w-100 p-3 rounded">
+          <h2 class="text-3xl font-bold text-center mb-6 text-black text-login col-md-9">Signup Account</h2>
+      <form id="signup-form" class="space-y-4 col-md-9">
+        <div>
+          <label for="email" class="form-label mb-2 text-3vw sm:text-sm font-medium text-black">Email</label>
+          <input type="email" name="email" id="email" class="form-control" placeholder="Enter your email" required>
+        </div>
+        <div>
+          <label for="username" class="form-label mb-2 text-3vw sm:text-sm font-medium text-black">Username</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Enter your username" required>
+        </div>
+        <div>
+          <label for="password" class="form-label mb-2 text-3vw sm:text-sm font-medium text-black">Password</label>
+          <i class="text-3vw sm:text-sm text-gray-300">(Password must be 8-12 characters long and contain 1 capital letter and 1 special character.)</i>
+          <div class="position-relative">
+            <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" required>
+            <button type="button" class="btn btn-outline-secondary position-absolute top-50 end-0 translate-middle-y" id="toggle-password-visibility">
+              <i class="far fa-eye"></i>
+            </button>
+          </div>
+        </div>
+        <div>
+            <label for="password" class="form-label mb-2 text-3vw sm:text-sm font-medium text-black">Confirm Password</label>
+            <div class="position-relative">
+              <input type="password" name="password" id="password1" class="form-control" placeholder="Enter your password" required>
+              <button type="button" class="btn btn-outline-secondary position-absolute top-50 end-0 translate-middle-y" id="toggle-password-visibility1">
+                <i class="far fa-eye"></i>
+              </button>
+            </div>
+          </div>
+        <div class="d-flex justify-content-between align-items-center flex-wrap">
+          <button type="submit" class="btn btn-primary w-full sm:w-auto">Submit</button>
+          <p class="text-3vw sm:text-1.5vw text-black">Already have an account? <a href="./signin.html" class="text-blue-600 font-medium">Login</a></p>
+        </div>
+      </form>
     </div>
-    <script src="script.js"></script>
-</body>
-</html>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const togglePasswordVisibility = document.getElementById('toggle-password-visibility');
+    const togglePasswordVisibility1 = document.getElementById('toggle-password-visibility1');
+      const passwordInput = document.getElementById('password');
+      const passwordInput1 = document.getElementById('password1');
+
+      togglePasswordVisibility.addEventListener('click', () => {
+        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput.setAttribute('type', type);
+        togglePasswordVisibility.innerHTML = type === 'password' ? '<i class="far fa-eye"></i>' : '<i class="far fa-eye-slash"></i>';
+      });
+      togglePasswordVisibility1.addEventListener('click', () => {
+        const type = passwordInput1.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput1.setAttribute('type', type);
+        togglePasswordVisibility1.innerHTML = type === 'password' ? '<i class="far fa-eye"></i>' : '<i class="far fa-eye-slash"></i>';
+      });
+  </script>
+  <script src="script.js"></script>
+  </body>
+  </html>
