--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,7 @@
             <input type="text" id="signUpUsername" placeholder="Username" required>
             <input type="email" id="signUpEmail" placeholder="Email" required>
             <input type="password" id="signUpPassword" placeholder="Password" required>
+            <input type="password" id="signUpConfirmPassword" placeholder="Confirm Password" required />
             <button type="submit">Sign Up</button>
         </form>
         <p id="signUpError" class="error-message"></p>
