social_handles_added_feedabck_Form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
 
     <link rel="stylesheet" href="media-queries.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e2c561cb76.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- top banner -->
@@ -275,6 +279,12 @@
 
           <!-- Feedback Form -->
           <div class="feedback">
+            <div class="social-icons">
+              <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+              <a href=""><i class="fa-brands fa-telegram"></i></a>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+              <a href=""><i class="fa-brands fa-github"></i></a>
+           </div>
             <form action="" class="contact-left feedback">
               <h4>Feedback Form</h4>
               <div class="id">
