correct the typo error

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <div class="subfooter">
       <div class="container flex subfooter-container">
         <a class="fhover-link" href="#">Privacy policy</a>
-        <a class="fhover-link" href="#">Terms & Condition</a>
+        <a class="fhover-link" href="#">Terms & Conditions</a>
         <a class="fhover-link" href="#">Security Information</a>
         <a class="fhover-link" href="#"
           ><i class="fa-brands fa-facebook"></i
