added fav icons to footer
added  more fav icons to footer

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
             <a class="hover-link" href="#">Security Information</a>
             <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-github"></i></a>
+            
         </div>
     </div>
 
