--- a/signin.html
+++ b/signin.html
@@ -8,14 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="containers">
-        <h2>Sign In</h2>
-        <form id="signInForm">
-            <input type="text" id="signInUsername" placeholder="Username" required>
-            <input type="password" id="signInPassword" placeholder="Password" required>
-            <button type="submit">Sign In</button>
-        </form>
-        <p id="signInError" class="error-message"></p>
+    <div class="wrapper">
+        <div class="card-switch">
+            <label class="switch">
+               <input type="checkbox" class="toggle">
+               <span class="slider"></span>
+               <span class="card-side"></span>
+               <div class="flip-card__inner">
+                  <div class="flip-card__front">
+                     <div class="title">Log in</div>
+                     <form class="flip-card__form" action="">
+                        <input class="flip-card__input" name="email" placeholder="Email" type="email">
+                        <input class="flip-card__input" name="password" placeholder="Password" type="password">
+                        <button class="flip-card__btn">Let`s go!</button>
+                     </form>
+                  </div>
+                  <div class="flip-card__back">
+                     <div class="title">Sign up</div>
+                     <form class="flip-card__form" action="">
+                        <input class="flip-card__input" placeholder="Name" type="name">
+                        <input class="flip-card__input" name="email" placeholder="Email" type="email">
+                        <input class="flip-card__input" name="password" placeholder="Password" type="password">
+                        <button class="flip-card__btn">Confirm!</button>
+                     </form>
+                  </div>
+               </div>
+            </label>
+        </div>   
+   </div>
         <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
     <script src="script.js"></script>
