--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,8 @@
         <form id="signUpForm">
             <input type="text" id="signUpUsername" placeholder="Username" required>
             <input type="email" id="signUpEmail" placeholder="Email" required>
-            <input type="password" id="signUpPassword" placeholder="Password" required>
+            <label for="signUpPassword"></label>
+           <input type="password" id="signUpPassword" name="psw"  placeholder="Password"   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             <button type="submit">Sign Up</button>
         </form>
         <p id="signUpError" class="error-message"></p>
