modify companies section animation

--- a/index.html
+++ b/index.html
@@ -84,15 +84,17 @@
           The world’s best companies rely on UsabilityHub to make better design
           decisions.
         </div>
+        <Marquee onmouseover="this.stop();" onmouseout="this.start();">
         <div class="logos flex">
           <img class="logo" src="./assets/asset 3.png" alt="" />
           <img class="logo" src="./assets/asset 4.png" alt="" />
           <img class="logo" src="./assets/asset 5.png" alt="" />
           <img class="logo" src="./assets/asset 6.png" alt="" />
           <img class="logo" src="./assets/asset 7.png" alt="" />
-          <img class="logo1" src="./assets/asset 8.svg" alt="" />
+          <img class="logo" src="./assets/asset 8.svg" alt="" />
           <img class="logo" src="./assets/asset 9.png" alt="" />
         </div>
+      </Marquee>
       </div>
     </section>
 
