--- a/signup.html
+++ b/signup.html
@@ -7,18 +7,19 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="containers">
-        <h2>Sign Up</h2>
+<body class="sign-body">
+    <div class="form-container">
+       
         <form id="signUpForm">
+            <h2>Sign Up</h2>
             <input type="text" id="signUpUsername" placeholder="Username" required>
             <input type="email" id="signUpEmail" placeholder="Email" required>
-            <label for="signUpPassword"></label>
+            <!-- <label for="signUpPassword"></label> -->
            <input type="password" id="signUpPassword" name="psw"  placeholder="Password"   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             <button type="submit">Sign Up</button>
+            <p class="message">Already have an account? <a href="signin.html">SignIn</a></p>
         </form>
-        <p id="signUpError" class="error-message"></p>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
+       
     </div>
     <script src="script.js"></script>
 </body>
