edited footer navigation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .flex {
+        display: flex;
+        gap: 20px; /* Adds space between the columns */
+      }
+      .link-column {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid white; /* Optional: Adds a border for better visibility */
+      }
+      .fhover-link {
+        display: block;
+        margin: 5px 0; /* Adds space between links */
+      }
+    </style>
+   
     <title>My Website</title>
     <link rel="stylesheet" href="style.css" />
     <link
